--- a/08.3_SortViralSamtoBam.md
+++ b/08.3_SortViralSamtoBam.md
@@ -13,5 +13,16 @@ module load samtools
 samtools sort -@ 2 -on SCNr3.SortedViralReads.bam$SGE_TASK_ID ../7_FilterMappedViralSam/SCNr3.FilteredViralReads.sam$SGE_TASK_ID
 ```
 
-samtools merge SCNr3.SortedViralFinalRead.bam SCNr3.SortedViralReads.bam*
+##Write a script (nano MergeMappedViralReads.qsh) 
+```
+#$ -N MergeMappedViralReads
+#$ -cwd
+#$ -S /bin/bash
+#$ -q medium*
+#$ -l mem=6G,h_vmem=6G
 
+
+module load samtools
+
+samtools merge SCNr3.SortedViralFinalRead.bam SCNr3.SortedViralReads.bam*
+```
