--- a/08.3_ExtractMappedVrialFastq.md
+++ b/08.3_ExtractMappedVrialFastq.md
@@ -1,15 +1,9 @@
 ```
-#$ -N ExtractMappedViralFastq
-#$ -cwd
-#$ -S /bin/bash
-#$ -q medium*
-#$ -l mem=6G,h_vmem=6G
-
 
 module load picard
 
 picard SamToFastq \
 INPUT=../7.2_SortViralSamtoBam/SCNr3.SortedViralFinalRead.bam \
-FASTQ=SCNr3.SortedViralFinalRead.R1 \
-SECOND_END_FASTQ=SCNr3.SortedViralFinalRead.R2
+FASTQ=SCNr3.SortedViralFinalRead.R1.fastq \
+SECOND_END_FASTQ=SCNr3.SortedViralFinalRead.R2.fastq
 ```
